google drive link

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="inner cover">
         <h1 class="cover-heading">The adventure begins</h1>
         <p class="lead cover-copy">Some olive oil for olive our loved ones!</p>
-        <p class="lead cover-copy">Feel free to add pictures from the big day to the google drive below, we would appreciate it!</p>
-        <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Add Photos</button></p>
+        <p class="lead cover-copy">Feel free to add pictures from the big day to the google drive below, we would really appreciate it!</p>
+        <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" onclick="window.location.href='https://drive.google.com/drive/folders/1vvwbLqDA4ZqkpoFcYtikNghwxF4gGWzm?usp=sharing'" data-target="#subscribeModal">Add Photos</button></p>
       </div>
       <div class="mastfoot">
         <div class="inner">
